[bdist_wheel]
universal=1

[metadata]
name = jupyter-www-proxy
version = 0.1.2
description = HTTP server for Jupyter.
long_description = file: README.md
long_description_content_type = text/markdown
author       = Chung Chan
author_email = chungc@alum.mit.edu
url          = https://github.com/ccha23/jupyter-www-proxy
license = MIT
license_files = LICENSE
platforms = Linux, Mac OS X, Windows
classifiers =
    Intended Audience :: Education
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Framework :: Jupyter
    Framework :: Jupyter :: JupyterLab
    Framework :: Jupyter :: JupyterLab :: 3
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Jupyter

[options]
python_requires = >=3.6
include_package_data = True
install_requires = jupyter-server-proxy
packages = find:

[options.packages.find]
where = .
include = jupyter_www_proxy